testdata/baselines/reference/submodule/conformance/jsdocTypeDefAtStartOfFile.errors.txt
index.js(1,12): error TS2304: Cannot find name 'AnyEffect'.
index.js(3,12): error TS2304: Cannot find name 'Third'.


==== dtsEquivalent.js (0 errors) ====
    /** @typedef {{[k: string]: any}} AnyEffect */
    /** @typedef {number} Third */
==== index.js (2 errors) ====
    /** @type {AnyEffect} */
               ~~~~~~~~~
!!! error TS2304: Cannot find name 'AnyEffect'.
    let b;
    /** @type {Third} */
               ~~~~~
!!! error TS2304: Cannot find name 'Third'.
    let c;
    